--- a/src/page/config.json
+++ b/src/page/config.json
@@ -1,5 +1,5 @@
 {
-  "API_HOST": "https://music.xianqiao.wang/neteaseapiv2",
+  "API_HOST": "https://netease-cloud-music-api-omega-brown.vercel.app/",
   "LOGGED_MARK_SELECTOR": "header [data-testid=user-widget-link]",
   "LYRICS_CONTAINER_SELECTOR": "nav[aria-label=Main] > div:last-of-type",
   "PAGE_PIP_STYLE": "position: relative; width: 100%; height: auto; border-radius: inherit;",
